# cwe-agent

./: .env  .gitignore  README.md  overview.txt  poetry.toml  pyproject.toml
.virtualenv/: envs.toml
cwe_agent/: run_full_pipeline.py
cwe_agent/data/: student_code.py  student_code2.py  student_code3.jsx  student_code4.py
cwe_agent/evaluator/: batch_evaluate_all_students.py  cwe_evaluator_agent.py  evaluate_cwe_injections.py  system-prompt.py  user-prompt.py
cwe_agent/helpers/: diff.py  io_utils.py
cwe_agent/injector/: cwe_injector_agent.py  inject_all_cwes.py  inject_and_store_cwes.py  system-prompt.py  user-prompt.py
cwe_agent/outcomes/: generate_learning_outcome.py  learning_outcome_agent.py  system-prompt.py  user-prompt.py
cwe_agent/ranker/: cwe_ranker_agent.py  rank_cwe_evaluations.py  system-prompt.py  user-prompt.py
cwe_agent/research-artifacts/injected_cwes/student_code2/: CWE-119.json  CWE-125.json  CWE-190.json  CWE-20.json  CWE-200.json  CWE-22.json  CWE-269.json  CWE-287.json  CWE-306.json  CWE-352.json  CWE-400.json  CWE-416.json  CWE-434.json  CWE-476.json  CWE-502.json  CWE-77.json  CWE-78.json  CWE-787.json  CWE-79.json  CWE-798.json  CWE-862.json  CWE-863.json  CWE-89.json  CWE-918.json  CWE-94.json
cwe_agent/research-artifacts/scored_cwes/student_code2/: 119_score.json  125_score.json  190_score.json  200_score.json  20_score.json  22_score.json  269_score.json  287_score.json  306_score.json  352_score.json  400_score.json  416_score.json  434_score.json  476_score.json  502_score.json  77_score.json  787_score.json  78_score.json  (+9 more)
